objects/Contract.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>to__c</fullName>
        <description>Is needed for Landwehr the contract management system.
Robin S. 15.10.2019</description>
        <inlineHelpText>Enddatum der Vertragslaufzeit</inlineHelpText>
        <label>to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>from__c</fullName>
        <description>Is needed for Landwehr the contract management system.
Robin S. 15.10.2019</description>
        <inlineHelpText>Startdatum der Vertragslaufzeit.</inlineHelpText>
        <label>from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows the Relation between Quote and Contract.
Robin S. 15.10.2019</description>
        <inlineHelpText>Referenz zum verbundenen Vertragsentwurf</inlineHelpText>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BC_100__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>die Person erhält eine BahnCard 100</inlineHelpText>
        <label>BC 100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <inlineHelpText>Notwendige Informationen für die Vertragserstellungen können hier hinterlegt werden. Diese Informationen werden ebenfalls nach L1 übertragen.</inlineHelpText>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Own_car__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>die Person nutzt ihren eigenen PKW</inlineHelpText>
        <label>Own car</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLZArea__c</fullName>
        <label>PLZ Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PLZ_Gebiet</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>beschreibt die Station, auf der der Einsatz erfolgen soll</inlineHelpText>
        <label>Station</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anlage_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Anforderungsprofile</inlineHelpText>
        <label>Anlage 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Radiuskm__c</fullName>
        <inlineHelpText>definiert das Einsatzgebiet nach dem Umkreis in km um den angegebenen Ort</inlineHelpText>
        <label>Radius km</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Radius_km</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CheckHUED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check HUED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entry_date__c</fullName>
        <inlineHelpText>Vertragsbeginn</inlineHelpText>
        <label>Entry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LostReason__c</fullName>
        <description>sfc-3085</description>
        <inlineHelpText>Vertragspartei, die für die Stornierung des Vertrages verantwortlich ist</inlineHelpText>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Klinik</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_car__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>die Person erhält einen Firmenwagen</inlineHelpText>
        <label>Company car</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_of__c</fullName>
        <inlineHelpText>definiert die Art des Vertrages, der geschlossen werden soll</inlineHelpText>
        <label>Creation of contract (customer)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANÜ Überlassungsvertrag</fullName>
                </value>
                <value>
                    <fullName>ANÜ Überlassungsvertrag mit ZV doctari</fullName>
                </value>
                <value>
                    <fullName>ANÜ Überlassungsvertrag mit ZV Kunde</fullName>
                </value>
                <value>
                    <fullName>Änderungsvertrag ANÜ Überlassungsvertrag</fullName>
                </value>
                <value>
                    <fullName>Änderungsvertrag ANÜ Überlassungsvertrag mit ZV doctari</fullName>
                </value>
                <value>
                    <fullName>Änderungsvertrag ANÜ Überlassungsvertrag mit ZV Kunde</fullName>
                </value>
                <value>
                    <fullName>Verlängerungsvertrag ANÜ Überlassungsvertrag</fullName>
                </value>
                <value>
                    <fullName>Verlängerungsvertrag ANÜ Überlassungsvertrag mit ZV doctari</fullName>
                </value>
                <value>
                    <fullName>Verlängerungsvertrag ANÜ Überlassungsvertrag mit ZV Kunde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <inlineHelpText>Grund für die Vertragsänderung</inlineHelpText>
        <label>Explanation</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FirstSigned__c</fullName>
        <label>FirstSigned</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FirstSigned</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_rate__c</fullName>
        <inlineHelpText>Brutto-Verdienst pro Stunde in €</inlineHelpText>
        <label>Hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HoursPerDay__c</fullName>
        <description>This fields defines the hours per day for a contract, by dividing the hours per week through 5 days.</description>
        <formula>WorkingHoursPerWeek__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnetes Feld: Arbeitsstunden pro Woche / 5</inlineHelpText>
        <label>Hours per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferNumber__c</fullName>
        <description>Info for Porky sync
Robin S. 21.11.2019</description>
        <label>Offer Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Opportunity.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Repeal_from__c</fullName>
        <inlineHelpText>Tag, an dem die Aufhebung des Vertrages in Kraft tritt</inlineHelpText>
        <label>Repeal from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValueOfADay__c</fullName>
        <description>Calculates by multiplying the hourly rate with the hours per day</description>
        <formula>Hourly_rate__c * HoursPerDay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnetes Feld: Stundensatz * h/Tag</inlineHelpText>
        <label>Value of a day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractType__c</fullName>
        <description>Info for Porky sync
Robin S. 21.11.2019</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rahmenvertrag</fullName>
                </value>
                <value>
                    <fullName>Honorarvertrag</fullName>
                </value>
                <value>
                    <fullName>Einsatzvertrag meditiv eG</fullName>
                </value>
                <value>
                    <fullName>Vertrag befristete Anstellung</fullName>
                    <color>#66E9BD</color>
                    <label>Vertrag befristete Anstellung</label>
                </value>
                <value>
                    <fullName>Vertrag PRAG</fullName>
                </value>
                <value>
                    <fullName>Vertrag Festanstellung</fullName>
                </value>
                <value>
                    <fullName>ANUE</fullName>
                    <color>#AFCADF</color>
                    <label>ANÜ</label>
                </value>
                <value>
                    <fullName>ANÜ Leiharbeitnehmervertrag</fullName>
                    <isActive>false</isActive>
                    <label>ANÜ Leiharbeitnehmervertrag</label>
                </value>
                <value>
                    <fullName>ANÜ Überlassungsvertrag</fullName>
                    <isActive>false</isActive>
                    <label>ANÜ Überlassungsvertrag</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CourierOrder__c</fullName>
        <inlineHelpText>Information für die Vertragsabteilung, ob ein Kurier benötigt wird.</inlineHelpText>
        <label>Courier Order</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CourierOrder</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Rechtsträger des Kunden</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Legal Entity)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecruitingAs__c</fullName>
        <inlineHelpText>Berufsbezeichnung entsprechend Urkunde/Qualifikationsnachweis, die sich aus der Kompetenz der Person ergibt; diese kann bearbeitet werden</inlineHelpText>
        <label>Recruiting As</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPRentalFree__c</fullName>
        <description>Uses Hourly Rate and Hours per Day to calculate the rental free value</description>
        <formula>Hourly_rate__c *  HoursPerDay__c * 0.6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tagespauschale, die das Personal pro Tag erhält, sofern er/sie nicht im Kundeneinsatz ist</inlineHelpText>
        <label>TP Rental Free</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_per_Day__c</fullName>
        <description>Is needed for Landwehr the contract management system.
Robin S. 15.10.2019</description>
        <label>Hours per Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OperatingTime__c</fullName>
        <description>OperatingTime from the child Object. (DLRS)
Robin S. 12.12.2019</description>
        <label>OperatingTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>Quote__r.OpportunityId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Referenz zur verbundenen Opportunity ID</inlineHelpText>
        <label>OpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlaceOfAction__c</fullName>
        <inlineHelpText>Ort, an dem der Einsatz stattfinden wird</inlineHelpText>
        <label>Place of Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreferredCity__c</fullName>
        <inlineHelpText>definiert das Einsatzgebiet nach einem Ort in Kombination mit dem Feld “Umkreis in km”</inlineHelpText>
        <label>Preferred City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_CheckCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T]_CheckCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UIPath_Status__c</fullName>
        <inlineHelpText>Rückmeldung von UIPath über Status der Vertragsübertragung nach Landwehr. Gibt Auskunft über fehlende Pflichtfelder. Bei Problemen mit dem Inhalt des Feldes an die IT wenden.</inlineHelpText>
        <label>UIPath Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancellationOn__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Der Tag zu dem storniert werden soll.</inlineHelpText>
        <label>Cancellation on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <description>Info for Porky sync.
Robin S. 21.11.2019</description>
        <label>Contract Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalAuthority__c</fullName>
        <inlineHelpText>referenziert das Feld “Abschlussvollmacht” des Kunden Accounts</inlineHelpText>
        <label>Final Authority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinalAuthority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L1_Case_Number__c</fullName>
        <label>L1 Case Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <inlineHelpText>gibt die Postanschrift der Person wieder, mit dem der Vertrag geschlossen werden soll</inlineHelpText>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operating_Days__c</fullName>
        <description>Is needed for Landwehr the contract management system.
Robin S. 15.10.2019</description>
        <label>Operating Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is needed for Landwehr the contract management system.
Robin S. 15.10.2019</description>
        <inlineHelpText>Name der Person, mit der ein Vertrag geschlossen werden soll</inlineHelpText>
        <label>Person Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Doctor, Caregiver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingMethod__c</fullName>
        <inlineHelpText>Information für die Vertragsabteilung, wie der Vertrag versendet werden soll.</inlineHelpText>
        <label>Shipping method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShippingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <inlineHelpText>necessary for History Report column</inlineHelpText>
        <label>[T] Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>doctari_client__c</fullName>
        <description>Is needed for Landwehr the contract management system.
Robin S. 15.10.2019</description>
        <label>doctari client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>doctari Fachpflege GmbH</fullName>
                </value>
                <value>
                    <fullName>doctari GbR</fullName>
                </value>
                <value>
                    <fullName>doctari GmbH</fullName>
                </value>
                <value>
                    <fullName>doctari Ärzte ANÜ GmbH</fullName>
                </value>
                <value>
                    <fullName>doctari Pflege GmbH</fullName>
                </value>
                <value>
                    <fullName>doctari Pflege ANÜ GmbH</fullName>
                </value>
                <value>
                    <fullName>doctari Med ANÜ GmbH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractAddress__c</fullName>
        <inlineHelpText>die im Account hinterlegte Vertragsanschrift des Kunden</inlineHelpText>
        <label>Contract Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LandlordDoctors__c</fullName>
        <inlineHelpText>zeigt den auf dem Kunden-Account hinterlegten Hausbesitzer Ärzte an</inlineHelpText>
        <label>Landlord Doctors</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PorkyExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>PorkyExternalID is used for the porky sync.
Robin S. 21.11.2019</description>
        <externalId>true</externalId>
        <label>Porky External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>limitation_type__c</fullName>
        <inlineHelpText>Art der Befristung</inlineHelpText>
        <label>limitation type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CancellationDays__c</fullName>
        <inlineHelpText>Die Anzahl der Tage die storniert werden sollen.</inlineHelpText>
        <label>Cancellation days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FurtherEducation__c</fullName>
        <label>Further Education</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_ContractNumber__c</fullName>
        <description>This field is used for the Enhanced Lightning Grid app, to display the contract number as a link in a related list.</description>
        <formula>HYPERLINK(&apos;/lightning/r/&apos;&amp;Id&amp;&apos;/view&apos;,  ContractNumber, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_from__c</fullName>
        <inlineHelpText>Tag, an dem die Person ihren letzten vertraglichen Arbeitstag hat</inlineHelpText>
        <label>Termination from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UsedFromContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Referenz zum Hauptvertrag; wird bei Vertragsänderungen automatisch ausgefüllt</inlineHelpText>
        <label>Used From Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>AmendementContracts</relationshipLabel>
        <relationshipName>AmendementContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactDepartment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Department</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LandlordCaregiver__c</fullName>
        <inlineHelpText>zeigt den auf dem Kunden-Account hinterlegten Hausbesitzer Pflege an</inlineHelpText>
        <label>Landlord Caregiver</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_Contract_Days__c</fullName>
        <formula>Latest_Contract_End_Date__c -  Earliest_Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Contract Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gross_monthly_fee__c</fullName>
        <inlineHelpText>Stundensatz * Arbeitsstunden pro Jahr / 12 Monate</inlineHelpText>
        <label>gross monthly fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_doctari__c</fullName>
        <description>Is needed for Landwehr the contract management system.
Robin S. 15.10.2019</description>
        <label>Commission doctari</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompetencePersonal__c</fullName>
        <inlineHelpText>Referenz zur hinterlegten Kompetenz der Person</inlineHelpText>
        <label>Competence Personal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContractRecordType__c</fullName>
        <description>This field shows Record Type Developer Name.
Robin S. 06.12.2019</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_Number__c</fullName>
        <formula>Account.CostCentreNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Centre Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detail_Lost_Reason__c</fullName>
        <inlineHelpText>übergeordneter Grund für die Stornierung</inlineHelpText>
        <label>Detail Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LostReason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>anderem Auftrag zugesagt (bei doctari)</fullName>
                </value>
                <value>
                    <fullName>anderem Auftrag zugesagt (Konkurrenz)</fullName>
                </value>
                <value>
                    <fullName>Budget nicht freigegeben</fullName>
                </value>
                <value>
                    <fullName>Doppelanfrage</fullName>
                </value>
                <value>
                    <fullName>fachliche Gründe</fullName>
                </value>
                <value>
                    <fullName>Fehlanfrage</fullName>
                </value>
                <value>
                    <fullName>intern gelöscht</fullName>
                </value>
                <value>
                    <fullName>Kandidat ungeeignet</fullName>
                </value>
                <value>
                    <fullName>Krankheit</fullName>
                </value>
                <value>
                    <fullName>persönliche Gründe</fullName>
                </value>
                <value>
                    <fullName>über andere Agentur zugesagt (Konkurrenz)</fullName>
                </value>
                <value>
                    <fullName>unbekannt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmploymentContract__c</fullName>
        <label>Employment Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EmploymentContract</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RatioToFullTimeJob__c</fullName>
        <description>Ratio between working hours per year and a full time job ob 2090 hours</description>
        <formula>WorkingHoursPerYear__c / 2090</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>gibt das prozentuale Verhältnis zu einer 40-Stunden-Woche wieder</inlineHelpText>
        <label>Ratio to full-time job</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Special_Leave_Type__c</fullName>
        <inlineHelpText>bezahlt oder unbezahlt</inlineHelpText>
        <label>Special Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Unpaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_leave_from__c</fullName>
        <inlineHelpText>erster Tag des Sonderurlaubs</inlineHelpText>
        <label>Special leave from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>doctariSalesPerson__c</fullName>
        <label>doctari Sales Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HistoricCreatedDate__c</fullName>
        <label>Historic Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Special_leave_until__c</fullName>
        <inlineHelpText>letzter Tag des Sonderurlaubs</inlineHelpText>
        <label>Special leave until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_Operation_Time_CM__c</fullName>
        <description>Zählt, wie viele Einsatzzeiträume im aktuellen Monat stattfinden.</description>
        <label>[T] Operation Time CM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkingHoursPerWeek__c</fullName>
        <inlineHelpText>Gesamtanzahl der Arbeitsstunden pro Woche</inlineHelpText>
        <label>working hours per week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkingHoursPerYear__c</fullName>
        <formula>WorkingHoursPerWeek__c * 52.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnetes Feld: Arbeitsstunden pro Woche * 52,25</inlineHelpText>
        <label>Working hours per year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherPersonalAddress__c</fullName>
        <inlineHelpText>hier kann eine alternative Adresse zum Feld “Adresse Personal” hinterlegt werden</inlineHelpText>
        <label>Other Personal Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestedStateCanton__c</fullName>
        <inlineHelpText>definiert das Einsatzgebiet nach Bundesländern</inlineHelpText>
        <label>Requested State Canton</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RequestedStateCanton</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommentOperationCheck__c</fullName>
        <label>Comment Operation Check</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Historic_Created_Date__c</fullName>
        <description>references the Historic Created Date (Date/Time) Field and transforms it into Date only</description>
        <formula>DATEVALUE(HistoricCreatedDate__c)</formula>
        <label>Historic Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QualificationPersonal__c</fullName>
        <inlineHelpText>Referenz zur hinterlegten Qualifikation der verknüpften Opportunity</inlineHelpText>
        <label>Qualification Personal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_area_in_facility__c</fullName>
        <inlineHelpText>beschreibt die Tätigkeit, für die die Person eingesetzt wird</inlineHelpText>
        <label>Work area (in facility)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPersonEmployees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Ansprechpartner des Kunden für den Bereich Personal</inlineHelpText>
        <label>Contact Person Employees</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Contact Person Employees)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_CoVid_19_Information__c</fullName>
        <formula>IF(INCLUDES(  Account.CoVid_19_Information__c  , &quot;antigen test on site&quot;), &quot;Antigen-Test vor Ort&quot;, NULL)  +BR()+ 
IF(INCLUDES( Account.CoVid_19_Information__c, &quot;affidavit of freedom from symptoms&quot;), &quot;Eidesstattliche Erklärung der Symptomfreiheit&quot;, NULL)  +BR()+ 
IF(INCLUDES( Account.CoVid_19_Information__c , &quot;test certificate by WAZ&quot;), &quot;Testbescheinigung durch WAZ&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]CoVid-19 Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_CurrentUserLandloard__c</fullName>
        <formula>IF( OR(($User.FirstName + &apos; &apos; + $User.LastName) =  Account.Account_Owner_Berlin__c , ($User.FirstName + &apos; &apos; + $User.LastName) =  Account.Account_Owner_Hamburg__c ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Current User Landlord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Prior_Operating_Days__c</fullName>
        <label>[T] Prior Operating Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_UnlockFinalContracts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With this field checked, users are allowed to edit contracts, which are not in a draft status. This field is used in automations, to give the user edit rights within that process.</description>
        <label>[T] Unlock Final Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dormant_employment_from__c</fullName>
        <inlineHelpText>erster Tag des ruhenden Arbeitsverhältnisses</inlineHelpText>
        <label>Dormant employment from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_running_User_Doctors__c</fullName>
        <description>Returns 1 if current User is Landlord Doctor on Accounts</description>
        <formula>IF(CONTAINS(Account.Account_Owner_Berlin__c, $User.FirstName &amp; &quot; &quot; &amp; $User.LastName ) , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is running User (Doctors)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>working_hours_per_month__c</fullName>
        <inlineHelpText>Arbeitsstunden pro Jahr / 12 Monate</inlineHelpText>
        <label>working hours per month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dormant_employment_until__c</fullName>
        <inlineHelpText>letzter Tag des ruhenden Arbeitsverhältnisses</inlineHelpText>
        <label>Dormant employment until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Contract_End_Date__c</fullName>
        <description>Calculates maximum of all operation times „To__c“ values through lookup rollup summary app</description>
        <label>Latest Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_CoVid_19_Email_pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For these records the future CoVid-19 Email has already been triggered.</description>
        <label>[T]CoVid-19 Email pending</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>